# zyrkom

./: .gitignore  CONTRIBUTING.md  LICENSE-COMMERCIAL-TEMPLATE  LICENSE-ZYRKOM  LICENSE_SUMMARY.md  README.md  git-description.txt  install.bat  install.sh
.cursor/rules/: research_protocol.mdc  structure.mdc  zyrkom_rust.mdc
config/: LICENSE  README.md
docs/: COMMERCIAL_LICENSING_FAQ.md  ENFORCEMENT_STRATEGY.md  LICENSING_GUIDE.md  MUSICAL_DNA.md  patent_technical_specification.md  prd.txt  techstack.md  zyrkom_whitepaper.md
research/: legal_action_checklist.md  papers.md  prompts.md
zyrkom/: Cargo.toml  README.md  musical_proof.zkp  musical_proof_with_json.json  musical_proof_with_json.zkp  spanish_anthem_marcha_real.json  spanish_anthem_marcha_real.zkp  spanish_anthem_marcha_real.zyrkom  test_musical.zyrkom
zyrkom-ui/: .gitignore  Cargo.toml  FEATURES.md  PERFORMANCE_NOTES.md  README.md  SETUP_INSTRUCTIONS.md  TESTING.md  index.html  package-lock.json  package.json  tauri.conf.json  test-connection.js  test-websocket.js  vite.config.ts
zyrkom-ui/backend/: server.js
zyrkom-ui/src/: App.tsx  index.css  main.rs  main.tsx  matrix-global.css
zyrkom-ui/src/components/: AudioVisualizer.tsx  DoomWindow.tsx  FloatingWindow.tsx  FrequencyVisualizer.tsx  IntervalControls.tsx  MatrixRain.tsx  MusicalDnaWindow.tsx  ZKStudioWindow.tsx  ZKTerminal.tsx  ZyrkomWindow.tsx
zyrkom/benches/: musical_constraints.rs  zk_generation.rs
zyrkom/src/: lib.rs  main.rs  musical_dna.rs
zyrkom/src/dsl/: mod.rs  parser.rs
zyrkom/src/musical/: mod.rs  physics.rs
zyrkom/src/utils/: mod.rs
zyrkom/src/zk/: component.rs  constraints.rs  mod.rs  stark.rs
