[package]
name = "zyrkom-ui"
version = "0.1.0"
description = "Matrix-style UI for Zyrkom Musical Cryptography Framework"
authors = ["Zyra & Claude <zyrkom@example.com>"]
license = "Proprietary"
repository = "https://github.com/zyrkom/zyrkom"
edition = "2021"

# Tauri configuration for desktop app
[build-dependencies]
tauri-build = { version = "2.0", default-features = false , features = [] }

[dependencies]
# Core Zyrkom functionality - ENABLE AUDIO FEATURE
zyrkom = { path = "../zyrkom", features = ["audio"] }

# Tauri framework for desktop app - UPDATED TO V2
tauri = { version = "2.0", features = [] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio processing for real-time synthesis - MADE OPTIONAL
rodio = { version = "0.17", features = ["wav", "mp3"], optional = true }
cpal = { version = "0.15", optional = true }

# Mathematical computations
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

[features]
default = ["audio-matrix"]

# Audio features for Matrix UI
audio-matrix = ["rodio", "cpal"]
visual-effects = []

[profile.release]
opt-level = "s"    # Optimize for size
lto = true         # Link-time optimization  
codegen-units = 1  # Better optimization
panic = "abort"    # Smaller binary
strip = true       # Remove debug symbols 
