[package]
name = "zyrkom"
version = "0.1.0"
edition = "2024"
authors = ["Zyra <zyrav21@proton.me>"]
description = "Zero-Knowledge proofs based on immutable musical physics"
license = "MIT"
repository = "https://github.com/zyrkom/zyrkom"
readme = "README.md"
keywords = ["zero-knowledge", "music-theory", "cryptography", "stark", "physics"]
categories = ["cryptography", "mathematics", "multimedia::audio"]

[dependencies]
# ZK Backend - Circle STARKs
stwo = { git = "https://github.com/starkware-libs/stwo.git", features = ["std", "prover"] }

# Musical Theory
pitch-detector = "0.3"
# Note: We'll implement custom musical physics engine based on immutable constants

# Audio Generation (optional for tests)
rodio = { version = "0.17", optional = true }
cpal = { version = "0.15", optional = true }

# Performance & Concurrency
rayon = "1.10"
crossbeam = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI 
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
colored = "2.1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Optimization & SIMD
bytemuck = { version = "1.0", features = ["derive"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
quickcheck = "1.0"
quickcheck_macros = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
# Maximum optimization for ZK performance
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
# Enable debug info for profiling
debug = true
opt-level = 3

[features]
default = ["std"]
std = []
# Audio features for musical tests
audio = ["rodio", "cpal"]
test-audio = ["audio"] # Enables sound during tests
# gpu = ["stwo/gpu"]  # Stwo doesn't have gpu feature yet
simd = []

# Binary targets
[[bin]]
name = "zyrkom"
path = "src/main.rs"

[[bin]]
name = "musical-dna"
path = "src/bin/musical_dna.rs"

[[bench]]
name = "musical_constraints"
harness = false

[[bench]]
name = "zk_generation"
harness = false
