[package]
name = "zyrkom"
version = "1.0.0"
edition = "2021"
authors = ["ZyraV21 <zyrav21@proton.me>"]
description = "Revolutionary ZK framework based on immutable musical physics laws"
homepage = "https://github.com/Zyra-V23/zyrkom"
repository = "https://github.com/Zyra-V23/zyrkom"
license-file = "../LICENSE-ZYRKOM"
readme = "README.md"
keywords = ["zero-knowledge", "stark", "musical-physics", "cryptography", "zk-proofs"]
categories = ["cryptography", "mathematics", "multimedia::audio"]
rust-version = "1.88.0"

[lib]
name = "zyrkom"
path = "src/lib.rs"

[[bin]]
name = "zyrkom"
path = "src/bin/zyrkom.rs"

[[bin]]
name = "musical_dna"
path = "src/bin/musical_dna.rs"

[[bin]]
name = "pokedex"
path = "src/bin/pokedex.rs"

[[bin]]
name = "generate_test_audio"
path = "src/bin/generate_test_audio.rs"

[dependencies]
# Zero-Knowledge Framework
stwo = { git = "https://github.com/starkware-libs/stwo", branch = "main", default-features = false }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", branch = "main", default-features = false }

# Serialization and Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Mathematical Operations
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"

# Performance and Parallelization
rayon = "1.10"
crossbeam = "0.8"

# Compression
flate2 = "1.0"

# CLI and User Interface
clap = { version = "4.0", features = ["derive", "color"] }
colored = "2.0"
indicatif = "0.17"

# Time and Versioning
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"

# Memory Optimization
bytemuck = { version = "1.0", features = ["derive"] }

# Optional: Audio synthesis for verification
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.0"

[features]
default = ["compression", "cli", "parallel"]

# Core features
compression = ["flate2"]
cli = ["clap", "colored", "indicatif"]
parallel = ["rayon", "crossbeam"]

# Optional features
audio = ["cpal", "hound"]
test-audio = ["audio"]

# Performance optimizations
simd = []
gpu = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
debug = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[[bench]]
name = "musical_constraints"
harness = false

[[bench]]
name = "zk_generation"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]